# SQUiD

./: .gitignore  CMakeLists.txt  LICENSE  README.md
API/: CMakeLists.txt  config.json  main.cc
API/controllers/: api_v1_Server.cc  api_v1_Server.h  api_v1_pServer.cc  api_v1_pServer.h
API/src/: plain.cpp  plain.h  squid.cpp  squid.h
API/test/: CMakeLists.txt
data/: chr22_100samples_10SNPs.vcf  polynomial_U_131.txt  polynomial_U_131071.txt  polynomial_U_163841.txt
scripts/: debug.sh  fast.sh  make.sh
src/: CMakeLists.txt  SQUiD.cpp  comparator.cpp  comparator.hpp  globals.hpp  main.cpp  main_test[1]_tests.cmake  real.cpp  server.cpp  server.hpp  tests.cpp  tools.cpp  tools.hpp
src/benchmarks/: CMakeLists.txt  main_benchmark.cpp  misc_benchmark.cpp  setup_benchmark.cpp
